// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Building Blocks Do not update "manifest.json" with missing dependency when "allowAutoAddDependencyLib=false" 1`] = `
Object {
  "sap.app": Object {
    "id": "my.test.App",
  },
  "sap.ui5": Object {
    "dependencies": Object {
      "libs": Object {
        "sap.fe.templates": Object {},
      },
    },
  },
}
`;

exports[`Building Blocks Form building block getSerializedFileContent for Form building block 1`] = `
"<macros:Form
	id=\\"testForm\\"
	metaPath=\\"@com.sap.vocabularies.UI.v1.FieldGroup#GeneralInformation\\"
	title=\\"Test Form\\"/>
"
`;

exports[`Building Blocks Generate with optional parameters Generate Chart from object metaPath. Absolute path without entity 1`] = `
"<macros:Chart
    id=\\"REPLACE_WITH_BUILDING_BLOCK_ID\\"
    metaPath=\\"testQualifier\\"
    contextPath=\\"/REPLACE_WITH_ENTITY\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters Generate Chart from object metaPath. Absolute path without qualifier 1`] = `
"<macros:Chart
    id=\\"REPLACE_WITH_BUILDING_BLOCK_ID\\"
    metaPath=\\"REPLACE_WITH_A_QUALIFIER\\"
    contextPath=\\"/testEntitySet\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters Generate Chart from object metaPath. Complex absolute path 1`] = `
"<macros:Chart
    id=\\"REPLACE_WITH_BUILDING_BLOCK_ID\\"
    metaPath=\\"@com.sap.vocabularies.UI.v1.Chart#chartMacro5\\"
    contextPath=\\"/SessionMetrics\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters Generate Chart from object metaPath. Complex relative path 1`] = `
"<macros:Chart
    id=\\"REPLACE_WITH_BUILDING_BLOCK_ID\\"
    metaPath=\\"@com.sap.vocabularies.UI.v1.Chart#chartMacro4\\"
    contextPath=\\"/Sessions/Speed\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters Generate Chart from object metaPath. Relative path without entity 1`] = `
"<macros:Chart
    id=\\"REPLACE_WITH_BUILDING_BLOCK_ID\\"
    metaPath=\\"testQualifier\\"
    contextPath=\\"/REPLACE_WITH_ENTITY\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters Generate Chart from object metaPath. Relative path without qualifier 1`] = `
"<macros:Chart
    id=\\"REPLACE_WITH_BUILDING_BLOCK_ID\\"
    metaPath=\\"REPLACE_WITH_A_QUALIFIER\\"
    contextPath=\\"/testEntitySet\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters Generate Chart from object metaPath. Simple absolute path 1`] = `
"<macros:Chart
    id=\\"REPLACE_WITH_BUILDING_BLOCK_ID\\"
    metaPath=\\"testQualifier\\"
    contextPath=\\"/testEntitySet\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters Generate Chart from object metaPath. Simple relative path 1`] = `
"<macros:Chart
    id=\\"REPLACE_WITH_BUILDING_BLOCK_ID\\"
    metaPath=\\"testQualifier\\"
    contextPath=\\"/testEntitySet\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters getSerializedFileContent for chart building block 1`] = `
"<macros:Chart
    id=\\"testChart\\"
    metaPath=\\"testMetaPath\\"
    contextPath=\\"testContextPath\\"
    filterBar=\\"testFilterBar\\"
    personalization=\\"testPersonalization\\"
    selectionMode=\\"MULTIPLE\\"
    selectionChange=\\"testOnSelectionChange\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters getSerializedFileContent for chart building block 2`] = `
"{
    \\"sap.ui5\\": {
        \\"dependencies\\": {
            \\"libs\\": {\\"sap.fe.macros\\":{}}
        }
    }
}"
`;

exports[`Building Blocks Generate with optional parameters getSerializedFileContent for chart building block 3`] = `
"<macros:Chart
    id=\\"testChart\\"
    metaPath=\\"/REPLACE_WITH_A_QUALIFIER\\"
    contextPath=\\"REPLACE_WITH_ENTITY\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters getSerializedFileContent for field building block 1`] = `
"<macros:Field
    id=\\"testField\\"
    metaPath=\\"testMetaPath\\"
    contextPath=\\"testContextPath\\"
    formatOptions=\\"{'displayMode':'Value'}\\"
    readOnly=\\"true\\"
    semanticObject=\\"testSemanticObject\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters getSerializedFileContent for field building block 2`] = `
"{
    \\"sap.ui5\\": {
        \\"dependencies\\": {
            \\"libs\\": {\\"sap.fe.macros\\":{}}
        }
    }
}"
`;

exports[`Building Blocks Generate with optional parameters getSerializedFileContent for field building block 3`] = `
"<macros:Field
    id=\\"testField\\"
    metaPath=\\"/REPLACE_WITH_ENTITY/REPLACE_WITH_A_QUALIFIER\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters getSerializedFileContent for filter-bar building block 1`] = `
"<macros:FilterBar
    id=\\"testFilterBar\\"
    metaPath=\\"testMetaPath\\"
    contextPath=\\"testContextPath\\"
    search=\\"testOnSearch\\"
    filterChanged=\\"testOnFilterChanged\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters getSerializedFileContent for filter-bar building block 2`] = `
"{
    \\"sap.ui5\\": {
        \\"dependencies\\": {
            \\"libs\\": {\\"sap.fe.macros\\":{}}
        }
    }
}"
`;

exports[`Building Blocks Generate with optional parameters getSerializedFileContent for filter-bar building block 3`] = `
"<macros:FilterBar
    id=\\"testFilterBar\\"
    metaPath=\\"/REPLACE_WITH_ENTITY/REPLACE_WITH_A_QUALIFIER\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters getSerializedFileContent for table building block 1`] = `
"<macros:Table
    id=\\"testTable\\"
    metaPath=\\"testMetaPath\\"
    contextPath=\\"testContextPath\\"
    busy=\\"true\\"
    enableAutoColumnWidth=\\"true\\"
    enableExport=\\"true\\"
    enableFullScreen=\\"true\\"
    enablePaste=\\"true\\"
    filterBar=\\"testFilterBar\\"
    header=\\"Test Header\\"
    headerVisible=\\"true\\"
    isSearchable=\\"true\\"
    personalization=\\"Column\\"
    readOnly=\\"true\\"
    type=\\"ResponsiveTable\\"
    variantManagement=\\"None\\"
/>"
`;

exports[`Building Blocks Generate with optional parameters getSerializedFileContent for table building block 2`] = `
"{
    \\"sap.ui5\\": {
        \\"dependencies\\": {
            \\"libs\\": {\\"sap.fe.macros\\":{}}
        }
    }
}"
`;

exports[`Building Blocks Generate with optional parameters getSerializedFileContent for table building block 3`] = `
"<macros:Table
    id=\\"testTable\\"
    metaPath=\\"/REPLACE_WITH_ENTITY/REPLACE_WITH_A_QUALIFIER\\"
/>"
`;

exports[`Building Blocks generate building block, no fs 1`] = `
"<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"com.test.myApp.ext.main.Main\\" xmlns:macros=\\"sap.fe.macros\\">
    <Page title=\\"Main\\">
        <content>
            <macros:FilterBar id=\\"testFilterBar\\"/>
        </content>
    </Page>
</mvc:View>"
`;

exports[`Building Blocks generateBuildingBlockAggregation appends children inside existing actions container on second add 1`] = `
"<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:macros=\\"sap.fe.macros\\" controllerName=\\"com.test.myApp.ext.main.Main\\">
    <macros:Page id=\\"Page\\" title=\\"pageTitle\\">
        <macros:actions>
            <Button id=\\"actions_button\\" text=\\"Action 1\\" press=\\".onActionsClickAction1\\" type=\\"Ghost\\"/>
            <Button id=\\"actions_button1\\" text=\\"Action 2\\" press=\\".onActionsClickAction2\\" type=\\"Ghost\\"/>
            <Button id=\\"actions_button2\\" text=\\"Action 3\\" press=\\".onActionsClickAction3\\" type=\\"Ghost\\"/>
        </macros:actions>
    </macros:Page>
</mvc:View>"
`;

exports[`Building Blocks generateBuildingBlockAggregation appends children inside existing headerContent container on second add 1`] = `
"<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:macros=\\"sap.fe.macros\\" controllerName=\\"com.test.myApp.ext.main.Main\\">
    <macros:Page id=\\"Page\\" title=\\"pageTitle\\">
        <macros:headerContent>
            <VBox id=\\"headerContent_vbox\\">
                <Title id=\\"headerContent_title\\" text=\\"Page Title\\"/>
            </VBox>
            <VBox id=\\"headerContent_vbox1\\">
                <Title id=\\"headerContent_title1\\" text=\\"Page Title 2\\"/>
            </VBox>
        </macros:headerContent>
    </macros:Page>
</mvc:View>"
`;

exports[`Building Blocks generateBuildingBlockAggregation appends children inside existing navigationActions container on second add 1`] = `
"<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:macros=\\"sap.fe.macros\\" controllerName=\\"com.test.myApp.ext.main.Main\\">
    <macros:Page id=\\"Page\\" title=\\"pageTitle\\">
        <macros:navigationActions>
            <Button id=\\"navigationActions_button\\" icon=\\"sap-icon://full-screen\\" type=\\"Transparent\\"/>
            <Button id=\\"navigationActions_button1\\" icon=\\"sap-icon://full-screen\\" press=\\".onNavigationActionsFullScreen2\\" type=\\"Transparent\\"/>
        </macros:navigationActions>
    </macros:Page>
</mvc:View>"
`;

exports[`Building Blocks generateBuildingBlockAggregation appends children inside existing titleContent container on second add 1`] = `
"<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:macros=\\"sap.fe.macros\\" controllerName=\\"com.test.myApp.ext.main.Main\\">
    <macros:Page id=\\"Page\\" title=\\"pageTitle\\">
        <macros:titleContent>
            <GenericTag id=\\"titleContent_genericTag\\" text=\\"Status\\"/>
            <GenericTag id=\\"titleContent_genericTag1\\" text=\\"Status 2\\" design=\\"StatusIconHidden\\" status=\\"Information\\"/>
        </macros:titleContent>
    </macros:Page>
</mvc:View>"
`;

exports[`Building Blocks generateBuildingBlockAggregation does not append duplicate aggregation when it already exists in view 1`] = `
"<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:macros=\\"sap.fe.macros\\" controllerName=\\"com.test.myApp.ext.main.Main\\">
    <macros:Page id=\\"Page\\" title=\\"pageTitle\\" showFooter=\\"true\\">
        <macros:footer id=\\"footer\\">
            <OverflowToolbar/>
        </macros:footer>
    </macros:Page>
</mvc:View>"
`;

exports[`Building Blocks generateBuildingBlockAggregation does not append duplicate breadcrumbs aggregation when it already exists in view 1`] = `
"<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\" xmlns:macros=\\"sap.fe.macros\\" controllerName=\\"com.test.myApp.ext.main.Main\\">
    <macros:Page id=\\"Page\\" title=\\"pageTitle\\">
        <macros:breadcrumbs>
            <Breadcrumbs/>
        </macros:breadcrumbs>
    </macros:Page>
</mvc:View>"
`;

exports[`Building Blocks updateAggregationPath detects default aggregation when no explicit filterFields element exists 1`] = `
"<mvc:View xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns:macros=\\"sap.fe.macros\\" xmlns:core=\\"sap.ui.core\\">
    <macros:FilterBar id=\\"FilterBar1\\">
        <macros:FilterField id=\\"existingField\\"/>
        <macros:FilterField key=\\"newFieldKey\\" label=\\"New Field\\" id=\\"newField\\" placement=\\"After\\" property=\\"testProperty\\">
            <core:Fragment fragmentName=\\"my.test.App.ext.fragment.TestFragment\\" type=\\"XML\\"/>
        </macros:FilterField>
    </macros:FilterBar>
    <macros:FilterBar id=\\"FilterBar2\\"/>
</mvc:View>"
`;

exports[`Building Blocks updateAggregationPath detects explicit aggregation (filterFields) in target FilterBar 1`] = `
"<mvc:View xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns:macros=\\"sap.fe.macros\\" xmlns:core=\\"sap.ui.core\\">
    <macros:FilterBar id=\\"FilterBar1\\">
        <macros:filterFields>
            <macros:FilterField id=\\"existingField\\"/>
            <macros:FilterField key=\\"newFieldKey\\" label=\\"New Field\\" id=\\"newField\\" placement=\\"After\\" property=\\"testProperty\\">
                <core:Fragment fragmentName=\\"my.test.App.ext.fragment.TestFragment\\" type=\\"XML\\"/>
            </macros:FilterField>
        </macros:filterFields>
    </macros:FilterBar>
    <macros:FilterBar id=\\"FilterBar2\\"/>
</mvc:View>"
`;

exports[`Building Blocks updateAggregationPath does not incorrectly detect filterFields from other FilterBar 1`] = `
"<mvc:View xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns:macros=\\"sap.fe.macros\\" xmlns:core=\\"sap.ui.core\\">
    <macros:FilterBar id=\\"FilterBar1\\">
        <macros:filterFields>
            <macros:FilterField id=\\"field1\\"/>
        </macros:filterFields>
    </macros:FilterBar>
    <macros:FilterBar id=\\"FilterBar2\\">
        <macros:FilterField id=\\"field2\\"/>
        <macros:FilterField key=\\"newFieldKey\\" label=\\"New Field\\" id=\\"newFieldInBar2\\" placement=\\"After\\" property=\\"testProperty\\">
            <core:Fragment fragmentName=\\"my.test.App.ext.fragment.TestFragment\\" type=\\"XML\\"/>
        </macros:FilterField>
    </macros:FilterBar>
</mvc:View>"
`;

exports[`Building Blocks updateAggregationPath scopes aggregation search to target FilterBar when multiple FilterBars exist 1`] = `
"<mvc:View xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns:macros=\\"sap.fe.macros\\" xmlns:core=\\"sap.ui.core\\">
    <macros:FilterBar id=\\"FilterBar1\\">
        <macros:filterFields>
            <macros:FilterField id=\\"field1\\"/>
        </macros:filterFields>
    </macros:FilterBar>
    <macros:FilterBar id=\\"FilterBar2\\">
        <macros:filterFields>
            <macros:FilterField id=\\"field2\\"/>
            <macros:FilterField key=\\"newFieldKey\\" label=\\"New Field in Bar 2\\" id=\\"newFieldInBar2\\" placement=\\"After\\" property=\\"testProperty\\">
                <core:Fragment fragmentName=\\"my.test.App.ext.fragment.TestFragment\\" type=\\"XML\\"/>
            </macros:FilterField>
        </macros:filterFields>
    </macros:FilterBar>
</mvc:View>"
`;

exports[`Building Blocks updateAggregationPath scopes aggregation search to target Table when multiple Tables exist 1`] = `
"<mvc:View xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns:macros=\\"sap.fe.macros\\" xmlns:core=\\"sap.ui.core\\" xmlns:macrosTable=\\"sap.fe.macros.table\\">
    <macros:Table id=\\"Table1\\">
        <macros:Column id=\\"column1\\"/>
    </macros:Table>
    <macros:Table id=\\"Table2\\">
        <macros:Column id=\\"column2\\"/>
        <macrosTable:Column id=\\"TableColumn\\" header=\\"New Column in Table 2\\" importance=\\"High\\" placement=\\"After\\" key=\\"myColumnKey\\">
            <core:Fragment fragmentName=\\"my.test.App.ext.fragment.TestColumnFragment\\" type=\\"XML\\"/>
        </macrosTable:Column>
    </macros:Table>
</mvc:View>"
`;
